<resources>
    <string name="app_name">LayoutPracticing</string>
    <string name="text_button_login_facebook">FACEBOOK</string>
    <string name="text_button_login_google">GOOGLE</string>
    <string name="text_button_login">Login</string>
    <string name="text_hint_password">Password</string>
    <string name="text_hint_username">Username</string>
    <string name="text_button_github">My Github</string>
    <string name="text_button_linkedin">My Linkedin</string>
    <string name="text_profession">Android Enthusiasts</string>
    <string name="text_name">Zidan Nur Karim</string>
    <string name="text_long_description">orem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie lacus nunc, in ultrices tortor fringilla aliquet. Suspendisse odio est, porttitor in vehicula sit amet, consequat id eros. Etiam porttitor vitae nunc quis finibus. Vestibulum eget ligula tincidunt, lacinia turpis et, porta tellus. Proin fermentum sapien odio, vitae interdum eros ultrices vel. Sed eu placerat augue. Etiam porttitor leo tempus, lobortis felis in, finibus diam. Cras nec tellus at enim malesuada vestibulum. Aliquam vitae volutpat neque. Aliquam vel ex posuere, rhoncus risus nec, varius massa. Sed mattis diam et leo tempor, ac aliquam orci maximus. Quisque massa urna, accumsan ut pulvinar eget, eleifend non turpis. Nullam blandit magna ipsum, a condimentum dui mollis eget. Donec gravida imperdiet elementum. Donec at est id erat malesuada vehicula sed in metus. Nulla varius, nisi vel vehicula elementum, lorem ex pellentesque felis, non euismod nisl nisi vel justo. Donec quis nisi lectus. Integer at rutrum augue, ac dapibus massa. Fusce volutpat rutrum ligula nec imperdiet. Sed luctus sed elit eu aliquet. Nullam est quam, auctor eget tempor sit amet, ornare eu augue. Duis bibendum tortor vel felis tincidunt suscipit. Donec in elit ut turpis convallis mollis sit amet eget enim. Aliquam lectus est, sagittis nec ligula sit amet, fermentum tristique velit. Aenean feugiat vel arcu non dapibus. Aliquam erat volutpat. Cras eleifend orci quis ligula gravida consectetur. Morbi sit amet lectus at purus finibus lacinia nec vitae diam. In non dolor id augue consequat tempor. Ut posuere neque et semper gravida. Cras accumsan, quam eu tristique vehicula, sapien urna volutpat justo, non dictum lorem est in neque. Cras iaculis dolor nec est fermentum accumsan. Morbi efficitur suscipit ante, ac lobortis mi ultricies in. Nam a nibh mauris. Ut tempor, enim et vestibulum scelerisque, urna nisi scelerisque libero, ac commodo enim odio ut ipsum. Maecenas metus erat, vehicula non erat at, facilisis bibendum risus. Curabitur convallis massa et ligula blandit, quis varius est lobortis. Ut felis orci, mattis at urna ac, laoreet facilisis sem.</string>
</resources>